[package]
name = "io"
version = "0.1.0"
edition = "2018"
publish = false

[[bin]]
name = "async-io"
path = "src/async-io.rs"

[[bin]]
name = "echo-server"
path = "src/echo-server.rs"

[[bin]]
name = "echo-server-copy"
path = "src/echo-server-copy.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"